--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <div id="gameField">
-    <div id="paddle1"></div>
-    <div id="paddle2"></div>
-    <div id="ball"></div>
-    <div id="score1">0</div>
-    <div id="score2">0</div>
-    <div id="middleLine"></div>
+  <div id="gameField" style="width: 600px; height: 400px; background-color: #D8BFD8; position: relative;">
+    <div id="paddle1" style="width: 20px; height: 100px; background-color:#4B0082; position: absolute;"></div>
+    <div id="paddle2" style="width: 20px; height: 100px; background-color:#4B0082; position: absolute;"></div>
+    <div id="ball" style="width: 20px; height: 20px; background-color:#A52A2A; position: absolute;"></div>
+    <div id="score1" style="background-color:#CD5C5C; position: absolute; left: 35%; transform: translateX(-50%);">0</div>
+    <div id="score2" style="background-color: #CD5C5C; position: absolute; right: 35%; transform: translateX(-50%);">0</div>
+    <div id="middleLine" style="background-color: 	#BC8F8F;position: absolute;"></div>
   </div>
   <script src="app/main.js"></script>
 </body>
