--- a/index.html
+++ b/index.html
@@ -2,6 +2,40 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <style>
+     #ball {
+      border-radius: 50%;
+      position: absolute;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      height: 20px;
+      width: 20px;
+      background-color: green;
+      left: 50%;
+      top: 50%;
+      border: 2px;
+       
+    } 
+    #ball {
+  animation: spin 2s linear infinite;
+}
+    @keyframes spin {
+      0%{transform: rotate(Odeg);}
+      100%{transform: rotate(360deg);}
+    }
+    #score1, #score2 {
+  color: #ff0000;
+  position: absolute;
+  top: 10px;
+  font-size: 30px;
+}
+#gameField {
+  background-color: orange;
+  position: relative;
+  height: 400px;
+  width: 600px;
+  border: 1px solid white;
+}
+  </style>
 </head>
 <body>
   <div id="gameField">
