--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <h1 class="title">PING PONG FUTBOLERO</h1>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 </head>
 <body>
   <div id="gameField">
@@ -11,6 +13,9 @@
     <div id="score1">0</div>
     <div id="score2">0</div>
     <div id="middleLine"></div>
+    <div id="middleCircle"></div>
+    <div id="goalAreaLeft"></div>
+    <div id="goalAreaRight"></div>
   </div>
   <script src="app/main.js"></script>
 </body>
