--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <h1 class="title">PING PONG FUTBOLERO</h1>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 </head>
 <body>
+  <title> MNI JUEGO PING PONG </title>
+  <p>                                         PING PONG del INGE DIEGUITO</p>
   <div id="gameField">
     <div id="paddle1"></div>
     <div id="paddle2"></div>
@@ -13,9 +13,6 @@
     <div id="score1">0</div>
     <div id="score2">0</div>
     <div id="middleLine"></div>
-    <div id="middleCircle"></div>
-    <div id="goalAreaLeft"></div>
-    <div id="goalAreaRight"></div>
   </div>
   <script src="app/main.js"></script>
 </body>
