--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <title> MNI JUEGO PING PONG </title>
+  <title> MNI JUEGO PING PONG Andres</title>
   <p>                                         PING PONG del INGE DIEGUITO</p>
   <div id="gameField">
     <div id="paddle1"></div>
